--- a/.src/Form/zzzFake.form
+++ b/.src/Form/zzzFake.form
@@ -20,9 +20,10 @@
   }
   { PanelNowNext Panel LabelPanel
     Name = "PanelNowNext"
-    MoveScaled(7,23,106,11)
+    MoveScaled(-1,22,106,11)
     Visible = False
     Background = &H81B0D6&
+    Foreground = &HFFFFFF&
     Arrangement = Arrange.Vertical
     Margin = True
     Padding = 2
@@ -39,7 +40,6 @@
       Foreground = &HFFFFFF&
       Arrangement = Arrange.Horizontal
       Margin = True
-      Border = Border.Raised
       { ButtonInfoNow2 PictureBox LabelPanel
         Name = "ButtonInfoNow2"
         MoveScaled(0,0,5,3)
@@ -72,16 +72,15 @@
       }
     }
     { Separator1 Separator
-      MoveScaled(18,4,65,1)
+      MoveScaled(18,4,65,0.5714)
     }
     { HBox2 Panel NowPanel
       Name = "HBox2"
-      MoveScaled(1,5,104,4)
+      MoveScaled(1,4,104,4)
       Background = &H000670&
       Foreground = &HFFFFFF&
       Arrangement = Arrange.Horizontal
       Margin = True
-      Border = Border.Raised
       { ButtonInfoNow PictureBox NowPanel
         Name = "ButtonInfoNow"
         MoveScaled(0,0,5,3)
@@ -109,22 +108,25 @@
         MoveScaled(33,1,20,2)
         Font = Font["Bold,+1"]
         Mouse = Mouse.Pointing
+        Expand = True
         AutoResize = True
         Text = ("Not available")
         Alignment = Align.Left
       }
-      { VBox4 VBox
-        MoveScaled(78,1,13,1)
-        Expand = True
+      { PictureBox1 PictureBox buttonepg
+        Name = "PictureBox1"
+        MoveScaled(89,0,4,4)
+        Mouse = Mouse.Pointing
+        Picture = Picture["icon:/22/calendar"]
       }
-      { Button1 Button
-        MoveScaled(90,1,13,3)
+      { LabelNowName2 TextLabel buttonepg
+        Name = "LabelNowName2"
+        MoveScaled(94,1,7,2)
         Font = Font["Bold,+1"]
-        Foreground = &HFFFFFF&
+        Mouse = Mouse.Pointing
         AutoResize = True
         Text = ("EPG")
-        Picture = Picture["icon:/22/calendar"]
-        Border = False
+        Alignment = Align.Left
       }
     }
     { HBox3 Panel NextPanel
@@ -134,7 +136,6 @@
       Foreground = &HFFFFFF&
       Arrangement = Arrange.Horizontal
       Margin = True
-      Border = Border.Raised
       { ButtonInfoNext PictureBox NextPanel
         Name = "ButtonInfoNext"
         MoveScaled(0,0,5,3)
@@ -151,10 +152,8 @@
         Text = ("NEXT")
         Alignment = Align.Left
       }
-      { VBox3 VBox NextPanel
-        Name = "VBox3"
+      { VBox3 VBox
         MoveScaled(24,1,7,1)
-        Mouse = Mouse.Pointing
       }
       { LabelNextStart TextLabel NextPanel
         Name = "LabelNextStart"
@@ -165,23 +164,19 @@
         Text = ("13:50")
         Alignment = Align.Left
       }
-      { Label4 TextLabel LabelNextName
-        Name = "Label4"
+      { LabelNextName TextLabel NextPanel
+        Name = "LabelNextName"
         MoveScaled(70,0,20,2)
         Font = Font["Bold,Italic,+1"]
         Mouse = Mouse.Pointing
-        AutoResize = True
+        Expand = True
         Text = ("Not Available")
         Alignment = Align.Left
-      }
-      { VBox5 VBox
-        MoveScaled(87,1,13,1)
-        Expand = True
       }
     }
   }
   { PanelMini Panel
-    MoveScaled(19,35,15,16)
+    MoveScaled(1,34,15,16)
     Arrangement = Arrange.Fill
   }
 }
