Fixed a tooltip message

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1810,7 +1810,7 @@
               MoveScaled(36,0,4,4)
               Visible = False
               Font = Font["6"]
-              ToolTip = ("Next media")
+              ToolTip = ("Show/Hide current and next TV program.")
               Picture = Picture["icon:/medium/info"]
             }
             { PanScan Button
