--- a/.src/Form/OverlayTrayTip.form
+++ b/.src/Form/OverlayTrayTip.form
@@ -34,7 +34,8 @@
       Stretch = True
     }
     { Label1 Label
-      Move(84,0,175,77)
+      Move(84,0,175,91)
+      Foreground = &HFFFFFF&
       Mouse = Mouse.SizeAll
       Expand = True
     }
@@ -44,24 +45,32 @@
       Picture = Picture["icon:/16/lock"]
       Border = False
     }
-    { HBox1 HBox
-      Move(4,80,70,16)
+    { HBox1 Panel
+      Move(0,80,77,17)
       { btnprev PictureBox
-        Move(0,0,18,16)
-        Picture = Picture["icon:/16/start"]
+        Move(0,0,17,17)
+        Picture = Picture["media-skip-backward.png"]
+        Stretch = True
       }
       { btnplaypause PictureBox
-        Move(14,0,18,16)
-        Picture = Picture["icon:/16/play"]
+        Move(14,0,17,17)
+        Picture = Picture["media-playback-start.png"]
+        Stretch = True
       }
       { btnstop PictureBox
-        Move(28,0,18,16)
-        Picture = Picture["icon:/16/stop"]
+        Move(28,0,17,17)
+        Picture = Picture["media-playback-stop.png"]
+        Stretch = True
       }
       { btnnext PictureBox
-        Move(42,0,18,16)
-        Picture = Picture["icon:/16/end"]
+        Move(42,0,17,17)
+        Picture = Picture["media-skip-forward.png"]
+        Stretch = True
       }
+    }
+    { Labelshadow Label
+      Move(154,28,84,42)
+      Foreground = &H000000&
     }
   }
 }
