--- a/.src/Form/zzzFake.form
+++ b/.src/Form/zzzFake.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,102,71)
+  MoveScaled(0,0,106,71)
   Visible = False
   Icon = Picture["xt7-player.png"]
   Picture = Picture["FakeMask.png"]
@@ -20,19 +20,13 @@
   }
   { PanelNowNext Panel LabelPanel
     Name = "PanelNowNext"
-    MoveScaled(-1,22,106,11)
+    MoveScaled(0,22,106,35)
     Visible = False
     Background = &H81B0D6&
     Foreground = &HFFFFFF&
     Arrangement = Arrange.Vertical
     Margin = True
     Padding = 2
-    { ShadePictureNowNext PictureBox
-      MoveScaled(54,-3,29,24)
-      Visible = False
-      Picture = Picture["backpanel.png"]
-      Stretch = True
-    }
     { HBox1 Panel LabelPanel
       Name = "HBox1"
       MoveScaled(1,0,104,4)
@@ -72,7 +66,7 @@
     }
     { HBox2 Panel NowPanel
       Name = "HBox2"
-      MoveScaled(1,4,104,4)
+      MoveScaled(0,4,104,4)
       Background = &H000670&
       Foreground = &HFFFFFF&
       Arrangement = Arrange.Horizontal
@@ -125,9 +119,18 @@
         Alignment = Align.Left
       }
     }
+    { LabelNowInfo TextLabel
+      MoveScaled(2,8,93,4)
+      Visible = False
+      Font = Font["Bold"]
+      Background = &H000446&
+      Padding = 8
+      AutoResize = True
+      Alignment = Align.Justify
+    }
     { HBox3 Panel NextPanel
       Name = "HBox3"
-      MoveScaled(1,8,104,3)
+      MoveScaled(1,18,104,3)
       Background = &H000660&
       Foreground = &HFFFFFF&
       Arrangement = Arrange.Horizontal
@@ -176,9 +179,18 @@
         Wrap = False
       }
     }
+    { LabelNextInfo TextLabel
+      MoveScaled(1,21,96,4)
+      Visible = False
+      Font = Font["Bold,Italic"]
+      Background = &H000446&
+      Padding = 8
+      AutoResize = True
+      Alignment = Align.Justify
+    }
   }
   { PanelMini Panel
-    MoveScaled(1,34,15,16)
+    MoveScaled(19,2,15,16)
     Arrangement = Arrange.Fill
   }
 }
