Make question dialogs modal

--- a/.src/Form/MyQuestion.form
+++ b/.src/Form/MyQuestion.form
@@ -4,6 +4,7 @@
   MoveScaled(0,0,34,22)
   Visible = False
   Icon = Picture["icon:/16/question"]
+  Persistent = True
   Resizable = False
   Stacking = Window.Above
   SkipTaskbar = True
