--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -682,7 +682,7 @@
     #MoveScaled(43,6)
   }
   { HSplit1 HSplit
-    MoveScaled(0,6,103,68)
+    MoveScaled(1,6,103,68)
     Tracking = True
     Expand = True
     { LeftSidePanel Panel
@@ -969,16 +969,24 @@
             Text = ("Filter")
           }
           { SearchFieldDVB ComboBox
-            MoveScaled(4,0,19,3)
+            MoveScaled(4,0,14,3)
             ToolTip = ("Enter some search terms.\nSpecial character \"|\" means \"OR\",\nso you can type: Bach|Mozart ")
             Expand = True
           }
+          { Separator5 Separator
+            MoveScaled(19,0,1,3)
+          }
           { ButtonEPG Button
-            MoveScaled(25,0,9,4)
+            MoveScaled(20,0,9,4)
             ToolTip = ("Open the Electronic Program Guide window")
             AutoResize = True
             Text = ("EPG")
             Picture = Picture["icon:/16/calendar"]
+          }
+          { ButtonSavePls2 Button
+            MoveScaled(30,0,4,4)
+            ToolTip = ("Show options for DVBT")
+            Picture = Picture["icon:/16/options"]
           }
         }
         { Panel3 Panel
@@ -1000,7 +1008,7 @@
           }
         }
         { ScanBtn Button
-          MoveScaled(-1,52,35,4)
+          MoveScaled(1,53,35,4)
           ToolTip = ("Start simple dvb tuner")
           Text = ("Scan for channels")
           Picture = Picture["icon:/16/find"]
