--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,88,75)
+  MoveScaled(0,0,88,78)
   Tag = "12"
   Text = ("General options")
   Icon = Picture["icon:/16/options"]
@@ -26,10 +26,10 @@
     }
   }
   { GENERALOPTIONSFRAME Frame
-    MoveScaled(0,0,86,66)
+    MoveScaled(0,0,86,69)
     Expand = True
     { VBox1 VBox
-      MoveScaled(1,1,19,58)
+      MoveScaled(1,1,19,67)
       Spacing = True
       { Label1 Label
         MoveScaled(2,1,11,4)
@@ -37,16 +37,16 @@
         Alignment = Align.Justify
       }
       { OptionsList ListView
-        MoveScaled(1,5,15,52)
+        MoveScaled(1,5,15,61)
         Expand = True
       }
     }
     { Tabstrip1 TabStrip
-      MoveScaled(23,1,62,65)
-      Tag = "Audio CD"
+      MoveScaled(24,1,62,67)
+      Tag = "User options"
       Expand = True
       Arrangement = Arrange.Vertical
-      Count = 11
+      Count = 12
       Index = 0
       Text = ("Video")
       { ScrollView1 ScrollView
@@ -995,7 +995,7 @@
       Index = 9
       Text = ("Misc")
       { ScrollView3 ScrollView
-        MoveScaled(-1,1,55,55)
+        MoveScaled(4,4,55,55)
         Tag = "misc"
         Expand = True
         Arrangement = Arrange.Vertical
@@ -1036,23 +1036,8 @@
             Picture = Picture["icon:/small/open"]
           }
         }
-        { NoParse5 HBox
-          MoveScaled(1,10,44,4)
-          ToolTip = ("Here you can specify additional mplayer options.")
-          Spacing = True
-          { NoParseLabel6 Label
-            MoveScaled(1,1,14,3)
-            AutoResize = True
-            Text = ("Additional options")
-          }
-          { NoParseAdditionalOptions TextBox notifyobj
-            Name = "NoParseAdditionalOptions"
-            MoveScaled(17,1,26,3)
-            Expand = True
-          }
-        }
         { NoParse3 HBox
-          MoveScaled(1,15,44,4)
+          MoveScaled(1,10,44,4)
           ToolTip = ("Command or commands (semicolon separated) which\nwill be executed before a file is played.\nHINT: you can execute multiple commands using \";\" between them.\nHINT: If you don't want Xt7-player to wait for the command(s) to exit, use \"&\" at the end of each one.")
           Spacing = True
           { NoParseLabel5 Label
@@ -1066,7 +1051,7 @@
           }
         }
         { NoParse4 HBox
-          MoveScaled(1,20,44,4)
+          MoveScaled(1,15,44,4)
           ToolTip = ("Command or commands (semicolon separated) which\nwill be executed after a file has been played.\nHINT: you can execute multiple commands using \";\" between them.\nHINT: If you don't want Xt7-player to wait for the command(s) to exit, use \"&\" at the end of each one.")
           Spacing = True
           { NoParseLabel7 Label
@@ -1080,7 +1065,7 @@
           }
         }
         { NoParse19 HBox
-          MoveScaled(1,25,44,4)
+          MoveScaled(1,20,44,4)
           ToolTip = ("Enter the shutdown command \\n (make sure your  have rights to do it)")
           Spacing = True
           { NoParseLabel12 Label
@@ -1096,10 +1081,10 @@
           }
         }
         { NOPARSESEP2 Separator
-          MoveScaled(1,30,46,1)
+          MoveScaled(1,25,46,1)
         }
         { NoParse6 HBox
-          MoveScaled(1,32,44,4)
+          MoveScaled(1,27,44,4)
           ToolTip = ("Enable/Disbale Tooltips")
           Spacing = True
           { ToolTipsCHK CheckBox
@@ -1110,7 +1095,7 @@
           }
         }
         { NoParse46 HBox
-          MoveScaled(1,36,44,4)
+          MoveScaled(1,31,44,4)
           ToolTip = ("Enable this if you want xt7 to be controlled through an mpris2 compliant client.\n")
           Spacing = True
           { ToolTipsCHKDBUS CheckBox
@@ -1128,7 +1113,7 @@
           }
         }
         { NoParse47 HBox
-          MoveScaled(1,40,44,4)
+          MoveScaled(1,36,44,4)
           ToolTip = ("Enable/Disbale Tooltips")
           Spacing = True
           { RestorePlayCHK CheckBox
@@ -1139,7 +1124,7 @@
           }
         }
         { NoParse18 HBox
-          MoveScaled(1,44,50,4)
+          MoveScaled(1,40,50,4)
           ToolTip = ("When an audio file is played, the right panel will show\ninformations on the file played, allowing to set covers\nfor your library items.")
           Spacing = True
           { CoverCHK2 CheckBox
@@ -1151,7 +1136,7 @@
           }
         }
         { NoParse20 HBox
-          MoveScaled(1,48,50,4)
+          MoveScaled(1,44,50,4)
           ToolTip = ("Enable/Disbale the tray icon")
           Spacing = True
           { TrayCHK1 CheckBox
@@ -1162,10 +1147,10 @@
           }
         }
         { NOPARSESEP1 Separator
-          MoveScaled(4,52,45,1)
+          MoveScaled(4,48,45,1)
         }
         { NoParse12 HBox
-          MoveScaled(1,53,50,4)
+          MoveScaled(1,49,50,4)
           Spacing = True
           { SaveOnExitCHK CheckBox
             MoveScaled(1,0,47,4)
@@ -1174,7 +1159,7 @@
           }
         }
         { NoParse21 HBox
-          MoveScaled(1,57,50,4)
+          MoveScaled(1,53,50,4)
           ToolTip = ("Save xt7 position and size on program exit.")
           Spacing = True
           { SaveGeometryCHK CheckBox
@@ -1184,7 +1169,7 @@
           }
         }
         { NoParse22 HBox
-          MoveScaled(1,61,50,4)
+          MoveScaled(1,57,50,4)
           ToolTip = ("If your window manager is not kwin\nand you find that form position is not correctly restored,\ntry checking this.")
           Spacing = True
           { SaveGeometryCompizCHK CheckBox
@@ -1195,6 +1180,161 @@
         }
       }
       Index = 10
+      Text = ("User Options")
+      { ScrollViewUserOptions ScrollView
+        MoveScaled(1,1,60,62)
+        Tag = "Audio CD"
+        Expand = True
+        Arrangement = Arrange.Vertical
+        Spacing = True
+        Margin = True
+        Padding = 6
+        { NOPARSELabel25 Label
+          MoveScaled(1,1,57,3)
+          Text = ("The following options will be appended to mplayer command line:")
+        }
+        { NoParseUserOption1 HBox
+          MoveScaled(1,5,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox1 CheckBox notifyobj
+            Name = "UserOptionChackbox1"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption1 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption2 HBox
+          MoveScaled(1,10,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox2 CheckBox notifyobj
+            Name = "UserOptionChackbox2"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption2 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption3 HBox
+          MoveScaled(1,15,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox3 CheckBox notifyobj
+            Name = "UserOptionChackbox3"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption3 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption4 HBox
+          MoveScaled(1,20,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox4 CheckBox notifyobj
+            Name = "UserOptionChackbox4"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption4 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption5 HBox
+          MoveScaled(1,25,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox5 CheckBox notifyobj
+            Name = "UserOptionChackbox5"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption5 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption6 HBox
+          MoveScaled(1,30,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox6 CheckBox notifyobj
+            Name = "UserOptionChackbox6"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption6 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption7 HBox
+          MoveScaled(1,35,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox7 CheckBox notifyobj
+            Name = "UserOptionChackbox7"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption7 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption8 HBox
+          MoveScaled(1,40,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox8 CheckBox notifyobj
+            Name = "UserOptionChackbox8"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption8 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption9 HBox
+          MoveScaled(1,45,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox9 CheckBox notifyobj
+            Name = "UserOptionChackbox9"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption9 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+        { NoParseUserOption10 HBox
+          MoveScaled(1,50,57,4)
+          ToolTip = ("Type an mplayer option like \"-rtc\" or more like \"-rtc -loop 5\"")
+          Spacing = True
+          { UserOptionChackbox10 CheckBox notifyobj
+            Name = "UserOptionChackbox10"
+            MoveScaled(1,0,3,4)
+          }
+          { NOPARSEAdditionalOption10 TextBox
+            MoveScaled(5,0,50,4)
+            Enabled = False
+            Expand = True
+          }
+        }
+      }
+      Index = 11
       Text = ("Style")
       { ScrollView9 ScrollView
         MoveScaled(1,0,59,61)
@@ -1472,7 +1612,7 @@
     }
   }
   { HBox2 HBox
-    MoveScaled(1,67,76,4)
+    MoveScaled(1,70,76,4)
     Spacing = True
     Padding = 4
     { HBox3 HBox
